@@ -4,6 +4,8 @@ CHANGELOG
 UTILS:
 * pan-os-php and API | introduce support for rule-merger
 * XML_op_JSON | move to class XMLOPJSON extend UTIL
+* register-ip-mgr | move to class UTIL( 'custom' )
+* userid-mgr | move to class UTIL( 'custom' )
 
 BUGFIX:
 
